--- a/config.json
+++ b/config.json
@@ -4,7 +4,8 @@
   },
   "inbounds": [
     {
-      "port": 10086,
+      "port": 8080,
+      "listen": "0.0.0.0",
       "protocol": "vmess",
       "settings": {
         "clients": [
